--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>IS2 | Productivity Hub</title>
+    
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#000000">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <link rel="stylesheet" href="style.css">
@@ -19,12 +23,16 @@
                 <p id="clock" class="font-medium text-lg mt-1 opacity-70">00:00:00</p>
             </div>
             <div class="flex items-center gap-3">
-                <button onclick="openInputModal()" class="bg-white text-black px-6 py-2 rounded-full font-bold text-sm hover:scale-105 transition-all shadow-lg">
+                <button onclick="openInputModal()" class="bg-white text-black px-6 py-2 rounded-full font-black text-xs tracking-widest hover:scale-105 transition-all shadow-lg">
                     + ADD TASK
                 </button>
                 <button onclick="toggleThemeManually()" class="p-3 bg-zinc-100 dark:bg-zinc-800 rounded-full shadow-sm">
                     <span id="theme-icon">🌙</span>
                 </button>
+                <div class="status-pill px-4 py-2 rounded-xl flex items-center gap-2 bg-zinc-100 dark:bg-zinc-800">
+                    <span class="w-2 h-2 rounded-full bg-green-500"></span> 
+                    <span class="text-[10px] font-black uppercase">SYSTEM ACTIVE</span>
+                </div>
             </div>
         </header>
 
@@ -37,9 +45,11 @@
                     <div id="listData" class="space-y-4"></div>
                 </div>
             </div>
+
             <div class="lg:col-span-4 space-y-6 fade-in">
                 <div class="liquid-glass p-6">
                     <h2 class="text-xl font-bold mb-6 tracking-tight text-center">Calendar</h2>
+                    <div id="calendar-month-year" class="text-[10px] font-bold mb-4 opacity-40 uppercase text-center"></div>
                     <div id="calendar-container" class="grid grid-cols-7 gap-2"></div>
                 </div>
             </div>
@@ -50,7 +60,7 @@
         <div class="absolute inset-0 bg-black/60 backdrop-blur-lg" onclick="closeInputModal()"></div>
         <div class="liquid-glass relative w-full max-w-md p-8 shadow-2xl border border-zinc-200 dark:border-zinc-800 animate-slide-up">
             <div class="flex justify-between items-center mb-6">
-                <h2 class="text-2xl font-bold tracking-tight">New Task</h2>
+                <h2 class="text-2xl font-bold tracking-tight">New Entry</h2>
                 <button onclick="closeInputModal()" class="text-2xl opacity-50 hover:opacity-100">✕</button>
             </div>
             
@@ -91,7 +101,7 @@
 
     <div id="deleteModal" class="fixed inset-0 z-[200] hidden items-center justify-center p-4">
         <div class="absolute inset-0 bg-black/40 backdrop-blur-md"></div>
-        <div class="liquid-glass relative w-full max-w-xs p-8 text-center">
+        <div class="liquid-glass relative w-full max-w-xs p-8 text-center bg-white dark:bg-zinc-900">
             <h3 class="text-xl font-bold mb-4">Delete Task?</h3>
             <div class="flex gap-3">
                 <button onclick="closeDeleteModal()" class="flex-1 py-3 rounded-xl bg-zinc-200 dark:bg-zinc-800 font-bold">Cancel</button>
