--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       }
     </script>
   </head>
-  <body class="antialiased">
+  <body class="antialiased pb-24">
     <header class="header-seamless">
       <div
         class="max-w-6xl mx-auto flex justify-between items-center px-6 md:px-10"
@@ -70,118 +70,245 @@
       </div>
     </header>
 
-    <div class="max-w-6xl mx-auto p-6 md:p-10 mt-6 relative z-10">
-      <div
-        id="next-deadline-area"
-        class="mb-10 min-h-[100px] relative z-20"
-      ></div>
+    <div id="main-content" class="max-w-6xl mx-auto p-6 md:p-10 relative z-10">
+      <section id="page-gallery" class="page-section hidden">
+        <h2
+          class="text-[10px] font-black opacity-20 uppercase tracking-[0.3em] mb-8 text-center"
+        >
+          Visual Gallery
+        </h2>
 
-      <main class="grid grid-cols-1 lg:grid-cols-12 gap-10">
-        <div class="lg:col-span-5 lg:sticky lg:top-24">
-          <section class="glass-card p-8 border border-white/5">
-            <h2
-              class="text-[10px] font-black opacity-20 uppercase tracking-[0.3em] mb-6"
-            >
-              Mission Control
-            </h2>
-            <div class="space-y-4">
-              <div class="grid grid-cols-2 gap-3">
-                <button
-                  id="btn-kategori"
-                  onclick="openSelect(event, 'kategori')"
-                  class="select-btn"
-                >
-                  Assignment
-                </button>
-                <button
-                  id="btn-priority"
-                  onclick="openSelect(event, 'priority')"
-                  class="select-btn"
-                >
-                  Medium
-                </button>
-              </div>
-              <div class="grid grid-cols-2 gap-3 relative">
-                <input
-                  type="text"
-                  id="tglMulai"
-                  placeholder="Start Date"
-                  class="ios-input cursor-pointer"
-                  readonly
-                  onclick="toggleDatePicker(event, 'start')"
-                />
-                <input
-                  type="text"
-                  id="tglDeadline"
-                  placeholder="Deadline"
-                  class="ios-input cursor-pointer"
-                  readonly
-                  onclick="toggleDatePicker(event, 'end')"
-                />
-                <div
-                  id="custom-datepicker"
-                  class="hidden absolute left-0 right-0 top-full mt-2 glass-card z-[999] p-5 border border-white/10 shadow-2xl"
-                >
-                  <div class="flex justify-between items-center mb-4">
-                    <button
-                      onclick="
-                        event.stopPropagation();
-                        changeMonth(-1);
-                      "
-                      class="text-[9px] font-black opacity-30"
-                    >
-                      PREV
-                    </button>
-                    <span
-                      id="currentMonthYear"
-                      class="text-[9px] font-black uppercase tracking-widest"
-                    ></span>
-                    <button
-                      onclick="
-                        event.stopPropagation();
-                        changeMonth(1);
-                      "
-                      class="text-[9px] font-black opacity-30"
-                    >
-                      NEXT
-                    </button>
-                  </div>
+        <div
+          class="glass-card mb-10 p-6 border border-white/5 relative overflow-hidden group/card"
+        >
+          <div
+            class="absolute inset-0 bg-gradient-to-br from-cyan-500/5 to-purple-500/5 opacity-0 group-hover/card:opacity-100 transition-opacity duration-500"
+          ></div>
+
+          <p
+            class="text-[9px] font-black opacity-30 uppercase tracking-widest mb-6 relative z-10"
+          >
+            Add New Moment
+          </p>
+
+          <div
+            class="flex flex-col md:flex-row gap-4 items-stretch relative z-10"
+          >
+            <label for="photo-input" class="flex-1 group/drop cursor-pointer">
+              <div
+                class="h-full border-2 border-dashed border-white/10 rounded-2xl p-6 flex flex-col items-center justify-center transition-all duration-300 group-hover/drop:border-white/30 group-hover/drop:bg-white/5 min-h-[120px]"
+              >
+                <div id="file-preview-container" class="hidden mb-3">
+                  <img
+                    id="file-preview"
+                    src="#"
+                    class="h-20 w-20 object-cover rounded-xl border border-white/20 shadow-2xl animate-in zoom-in duration-300"
+                  />
+                </div>
+
+                <div id="upload-placeholder" class="text-center">
                   <div
-                    id="datepicker-days"
-                    class="grid grid-cols-7 gap-1 text-center text-[10px] font-bold"
-                  ></div>
+                    class="text-2xl mb-2 opacity-20 group-hover/drop:scale-110 group-hover/drop:opacity-50 transition-all duration-300"
+                  >
+                    📸
+                  </div>
+                  <p
+                    id="file-name-display"
+                    class="text-[10px] font-bold uppercase tracking-widest opacity-30 group-hover/drop:opacity-60 transition-opacity"
+                  >
+                    Tap to select or drop photo
+                  </p>
                 </div>
               </div>
-              <textarea
-                id="isiData"
-                placeholder="What's the mission?"
-                class="ios-input h-24 pt-4 resize-none"
-              ></textarea>
               <input
-                type="url"
-                id="linkData"
-                placeholder="https://link-tugas.com"
-                class="ios-input"
+                type="file"
+                id="photo-input"
+                accept="image/*"
+                class="hidden"
+                onchange="previewImage(this)"
               />
-              <button onclick="simpanData()" class="primary-btn">
-                Update Hub
-              </button>
-            </div>
-          </section>
+            </label>
+
+            <button
+              onclick="uploadFoto()"
+              id="btn-upload-foto"
+              class="primary-btn md:w-40 py-4 text-[10px] flex items-center justify-center gap-2 hover:shadow-[0_0_20px_rgba(255,255,255,0.1)] transition-all"
+            >
+              <span>UPLOAD</span>
+            </button>
+          </div>
         </div>
 
-        <div class="lg:col-span-7 space-y-6">
-          <div id="listData" class="space-y-3"></div>
-          <section class="glass-card p-6 border border-white/5">
-            <h2
-              class="text-center font-black uppercase mb-6 tracking-[0.4em] text-[10px] opacity-20"
-            >
-              Timeline View
-            </h2>
-            <div id="calendar-container" class="calendar-grid"></div>
-          </section>
+        <div
+          id="gallery-grid"
+          class="grid grid-cols-2 md:grid-cols-3 gap-4"
+        ></div>
+      </section>
+
+      <section id="page-hub" class="page-section">
+        <div
+          id="next-deadline-area"
+          class="mb-10 min-h-[100px] relative z-20"
+        ></div>
+
+        <main class="grid grid-cols-1 lg:grid-cols-12 gap-10">
+          <div class="lg:col-span-5 lg:sticky lg:top-24">
+            <section class="glass-card p-8 border border-white/5">
+              <h2
+                class="text-[10px] font-black opacity-20 uppercase tracking-[0.3em] mb-6"
+              >
+                Mission Control
+              </h2>
+              <div class="space-y-4">
+                <div class="grid grid-cols-2 gap-3">
+                  <button
+                    id="btn-kategori"
+                    onclick="openSelect(event, 'kategori')"
+                    class="select-btn"
+                  >
+                    Assignment
+                  </button>
+                  <button
+                    id="btn-priority"
+                    onclick="openSelect(event, 'priority')"
+                    class="select-btn"
+                  >
+                    Medium
+                  </button>
+                </div>
+                <div class="grid grid-cols-2 gap-3 relative">
+                  <input
+                    type="text"
+                    id="tglMulai"
+                    placeholder="Start Date"
+                    class="ios-input cursor-pointer"
+                    readonly
+                    onclick="toggleDatePicker(event, 'start')"
+                  />
+                  <input
+                    type="text"
+                    id="tglDeadline"
+                    placeholder="Deadline"
+                    class="ios-input cursor-pointer"
+                    readonly
+                    onclick="toggleDatePicker(event, 'end')"
+                  />
+                  <div
+                    id="custom-datepicker"
+                    class="hidden absolute left-0 right-0 top-full mt-2 glass-card z-[999] p-5 border border-white/10 shadow-2xl"
+                  >
+                    <div class="flex justify-between items-center mb-4">
+                      <button
+                        onclick="
+                          event.stopPropagation();
+                          changeMonth(-1);
+                        "
+                        class="text-[9px] font-black opacity-30"
+                      >
+                        PREV
+                      </button>
+                      <span
+                        id="currentMonthYear"
+                        class="text-[9px] font-black uppercase tracking-widest"
+                      ></span>
+                      <button
+                        onclick="
+                          event.stopPropagation();
+                          changeMonth(1);
+                        "
+                        class="text-[9px] font-black opacity-30"
+                      >
+                        NEXT
+                      </button>
+                    </div>
+                    <div
+                      id="datepicker-days"
+                      class="grid grid-cols-7 gap-1 text-center text-[10px] font-bold"
+                    ></div>
+                  </div>
+                </div>
+                <textarea
+                  id="isiData"
+                  placeholder="What's the mission?"
+                  class="ios-input h-24 pt-4 resize-none"
+                ></textarea>
+                <input
+                  type="url"
+                  id="linkData"
+                  placeholder="https://link-tugas.com"
+                  class="ios-input"
+                />
+                <button onclick="simpanData()" class="primary-btn">
+                  Update Hub
+                </button>
+              </div>
+            </section>
+          </div>
+
+          <div class="lg:col-span-7 space-y-6">
+            <div id="listData" class="space-y-3"></div>
+            <section class="glass-card p-6 border border-white/5">
+              <h2
+                class="text-center font-black uppercase mb-6 tracking-[0.4em] text-[10px] opacity-20"
+              >
+                Timeline View
+              </h2>
+              <div id="calendar-container" class="calendar-grid"></div>
+            </section>
+          </div>
+        </main>
+      </section>
+
+      <section id="page-contact" class="page-section hidden text-center">
+        <h2
+          class="text-[10px] font-black opacity-20 uppercase tracking-[0.3em] mb-8"
+        >
+          Lecturer Directory
+        </h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 text-left">
+          <div class="glass-card p-6 border border-white/5 flex flex-col gap-2">
+            <p class="text-xs font-black opacity-30 uppercase tracking-widest">
+              Mata Kuliah A
+            </p>
+            <h3 class="text-lg font-bold">COMING SOON
+            <p class="text-sm opacity-60">COMING SOON@unikom.ac.id</p>
+          </div>
+          <div class="glass-card p-6 border border-white/5 flex flex-col gap-2">
+            <p class="text-xs font-black opacity-30 uppercase tracking-widest">
+              Mata Kuliah B
+            </p>
+            <h3 class="text-lg font-bold">COMING SOON
+            <p class="text-sm opacity-60">COMING SOON@unikom.ac.id</p>
+          </div>
         </div>
-      </main>
+      </section>
+
+      <section id="page-soon" class="page-section hidden">
+        <div
+          class="flex flex-col items-center justify-center min-h-[50vh] text-center"
+        >
+          <div
+            class="w-12 h-12 border-2 border-white/10 border-t-white rounded-full animate-spin mb-6"
+          ></div>
+          <h2 class="text-xl font-black uppercase tracking-[0.2em] opacity-40">
+            kela ey ker di jien hola
+          </h2>
+        </div>
+      </section>
+    </div>
+
+    <div class="fixed bottom-8 left-0 right-0 z-[1000] flex justify-center">
+      <div class="nav-wrap">
+        <div id="nav-bubble-active" class="bubble active"></div>
+        <nav class="nav">
+          <a href="#" onclick="switchPage('page-gallery', this)">Gallery</a>
+          <a href="#" onclick="switchPage('page-hub', this)" class="active"
+            >Hub</a
+          >
+          <a href="#" onclick="switchPage('page-contact', this)">Contact</a>
+          <a href="#" onclick="switchPage('page-soon', this)">System</a>
+        </nav>
+      </div>
     </div>
 
     <div
@@ -248,6 +375,109 @@
       </div>
     </div>
 
+    <div
+      id="toast-container"
+      class="fixed top-6 right-6 z-[9999] flex flex-col items-end pointer-events-none"
+    ></div>
+
+    <div
+      id="custom-confirm-modal"
+      class="modal-overlay hidden"
+      onclick="closeConfirm()"
+    >
+      <div
+        class="modal-card fade-in p-10 text-center max-w-xs"
+        onclick="event.stopPropagation()"
+      >
+        <div
+          class="w-12 h-12 bg-red-500/20 text-red-500 rounded-full flex items-center justify-center mx-auto mb-4"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="w-6 h-6"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="3"
+              d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
+            />
+          </svg>
+        </div>
+        <h3 class="text-sm font-black uppercase tracking-widest mb-2">
+          Confirm Delete
+        </h3>
+        <p
+          id="confirm-msg-text"
+          class="text-[10px] opacity-60 mb-8 font-bold uppercase leading-relaxed"
+        ></p>
+        <div class="grid grid-cols-2 gap-3">
+          <button
+            onclick="closeConfirm()"
+            class="py-3 bg-white/5 rounded-xl text-[9px] font-black uppercase hover:bg-white/10 transition"
+          >
+            No
+          </button>
+          <button
+            id="confirm-ok-btn"
+            class="py-3 bg-red-600 text-white rounded-xl text-[9px] font-black uppercase shadow-[0_0_20px_rgba(220,38,38,0.4)]"
+          >
+            Yes
+          </button>
+        </div>
+      </div>
+    </div>
+
     <script src="script.js"></script>
+
+    <script>
+      function previewImage(input) {
+        const container = document.getElementById("file-preview-container");
+        const img = document.getElementById("file-preview");
+        const placeholder = document.getElementById("upload-placeholder");
+        const nameDisplay = document.getElementById("file-name-display");
+
+        if (input.files && input.files[0]) {
+          const reader = new FileReader();
+          reader.onload = function (e) {
+            img.src = e.target.result;
+            container.classList.remove("hidden");
+            placeholder.classList.add("opacity-50");
+            nameDisplay.innerText = input.files[0].name;
+          };
+          reader.readAsDataURL(input.files[0]);
+        } else {
+          container.classList.add("hidden");
+          placeholder.classList.remove("opacity-50");
+          nameDisplay.innerText = "Tap to select or drop photo";
+        }
+      }
+
+      function switchPage(pageId, element) {
+        document
+          .querySelectorAll(".page-section")
+          .forEach((p) => p.classList.add("hidden"));
+        document.getElementById(pageId).classList.remove("hidden");
+        document
+          .querySelectorAll(".nav a")
+          .forEach((a) => a.classList.remove("active"));
+        element.classList.add("active");
+        const bubble = document.getElementById("nav-bubble-active");
+        bubble.style.width = element.offsetWidth + "px";
+        bubble.style.left = element.offsetLeft + "px";
+      }
+
+      window.addEventListener("load", () => {
+        const activeLink = document.querySelector(".nav a.active");
+        if (activeLink) {
+          const bubble = document.getElementById("nav-bubble-active");
+          bubble.style.width = activeLink.offsetWidth + "px";
+          bubble.style.left = activeLink.offsetLeft + "px";
+        }
+      });
+    </script>
   </body>
 </html>
